objects/Flights__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <length>200</length>
    <type>Text</type>
</CustomField>