objects/Flights__c/fields/NoOf_Passangers_Booked__c.field-meta.xml
<CustomField>
    <fullName>NoOf_Passangers_Booked__c</fullName>
    <label>NoOf Passangers Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>