objects/Flights__c/fields/Passanger__c.field-meta.xml
<CustomField>
    <fullName>Passanger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passanger</label>
    <referenceTo>Passanger__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flights</relationshipName>
    <type>Lookup</type>
</CustomField>