objects/Flights__c/fields/Reaching_Time__c.field-meta.xml
<CustomField>
    <fullName>Reaching_Time__c</fullName>
    <label>Reaching Time</label>
    <type>DateTime</type>
</CustomField>